syntax = "proto3";
package model;
import "productMessage.proto";

service ProductService{
  rpc FindProductsWithPagination(FindProductsWithPaginationRequest) returns(FindProductsWithPaginationResponse);
  rpc FindProductById(FindProductByIdRequest) returns (Product);
}